update registry links and preview card

--- a/apps/docs/content/docs/blocks/example-block/example.mdx
+++ b/apps/docs/content/docs/blocks/example-block/example.mdx
@@ -38,7 +38,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     <TabsTrigger id="manual" value="manual">Manual</TabsTrigger>
   </TabsList>
   <TabsContent value="cli">
-     <CommandTabs args={["add", "http://localhost:3000/r/example-block.json"]}/>
+     <CommandTabs args={["add", "https://rnr-registry-template-docs.vercel.app/r/example-block.json"]}/>
   </TabsContent>
   <TabsContent value="manual">
     <Steps> 
