--- a/apps/docs/content/docs/components/example-component.mdx
+++ b/apps/docs/content/docs/components/example-component.mdx
@@ -49,7 +49,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     <TabsTrigger id="manual" value="manual">Manual</TabsTrigger>
   </TabsList>
   <TabsContent value="cli">
-     <CommandTabs args={["add", "http://localhost:3000/r/example-component.json"]}/>
+     <CommandTabs args={["add", "https://rnr-registry-template-docs.vercel.app/r/example-component.json"]}/>
   </TabsContent>
   <TabsContent value="manual">
     <Steps> 
