--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -15,7 +15,9 @@ component registry allows you to distribute your custom components, hooks, pages
 other files to any React project.
 
 <Callout type="warn">
-This template uses NativeWind v4 and Tailwind v3. For Tailwind v4, you will need to update the template once NativeWind v5 is stable and supports it [link](https://www.nativewind.dev/blog/v5-migration-guide).
+  This template uses NativeWind v4 and Tailwind v3. For Tailwind v4, you will need to update the
+  template once NativeWind v5 is stable and supports it
+  [link](https://www.nativewind.dev/blog/v5-migration-guide).
 </Callout>
 
 ## Getting Started
