--- a/apps/docs/content/docs/installation.mdx
+++ b/apps/docs/content/docs/installation.mdx
@@ -9,30 +9,20 @@ Go to this repository's [github page](https://github.com/gabimoncha/rnr-registry
 
 ### Install the dependencies:
 
-```bash
-pnpm install
-```
+<BashCommand command={`pnpm install`} />
 
 - Run the development server for both apps:
 
-```bash
-pnpm dev
-```
+<BashCommand command={`pnpm dev`} />
 
 - Run the development server for the docs app:
 
-```bash
-pnpm dev:docs
-```
+<BashCommand command={`pnpm dev:docs`} />
 
 - Run the development server for the showcase app:
 
-```bash
-pnpm dev:showcase
-```
+<BashCommand command={`pnpm dev:showcase`} />
 
 - Build the registry:
 
-```bash
-pnpm registry
-```
+<BashCommand command={`pnpm registry`} />
