--- a/apps/docs/content/docs/usage.mdx
+++ b/apps/docs/content/docs/usage.mdx
@@ -18,10 +18,9 @@ description: How to use the React Native Reusables Registry Template
 
 ### Docs
 
+- `apps/docs/mdx-components.tsx` to create custom components used in `.mdx` files
 - `apps/docs/components/examples.tsx` to update the components
 - `apps/docs/components/blocks.tsx` to update the blocks
-- `apps/docs/components/blocks-grid.tsx` to update the blocks menu
-- `apps/docs/components/preview-card.tsx` to update the QR code link
 - `apps/docs/lib/file-generator.ts` to update the import paths in the code blocks
 - `apps/docs/registry.json` to update the registry
 - `apps/docs/tsconfig.json` to update the paths
