update installation and usage guides

--- a/apps/docs/content/docs/installation.mdx
+++ b/apps/docs/content/docs/installation.mdx
@@ -26,3 +26,7 @@ Go to this repository's [github page](https://github.com/gabimoncha/rnr-registry
 - Build the registry:
 
 <BashCommand command={`pnpm registry`} />
+
+- Format the code:
+
+<BashCommand command={`pnpm format`} />
