--- a/apps/docs/content/docs/usage.mdx
+++ b/apps/docs/content/docs/usage.mdx
@@ -7,14 +7,24 @@ description: How to use the React Native Reusables Registry Template
 
 - The example components are found in the `packages/example-library` folder.
 - The template includes the necessary config to use [react-native-reusables](https://reactnativereusables.com) components as dependencies.
-- The Reusables UI are installed in `packages/example-library/reusables`.
-
-## Updating the docs
 
 <Callout>
-  **Notes: ** When changing the `packages/example-library` folder name, you need to update the
-  following files too from:
+  **Note:** The Reusables UI is installed in `packages/example-library/reusables`.
+  
+  If you want to use more `react-native-reusables` components as dependencies, you have to install them
+  through the [CLI](https://reactnativereusables.com/docs/cli) inside `packages/example-library`.
 </Callout>
+
+## Building your own library
+
+You can start by changing the `packages/example-library` folder name and replace all the references to it through the codebase.
+
+<Callout>
+  - All `package.json` files start with `@rnr/...` and you will need to update them with your own library name too.
+  - All the imports throughout the codebase use aliases defined in `tsconfig.json` files. You can search by `@/example-library` and replace it with the new name of the folder.
+</Callout>
+
+## References
 
 ### Docs
 
@@ -44,7 +54,3 @@ description: How to use the React Native Reusables Registry Template
 - `packages/example-library/src/examples/*` to update the example components
 - `packages/example-library/src/blocks/*` to update the examples blocks
 
-<Callout>
-  **Notes: ** If you want to use more `react-native-reusables` components you can install them
-  through the [CLI](https://reactnativereusables.com/docs/cli) inside `packages/your-library`
-</Callout>
